fixed testimonials on mobile

--- a/css/child-theme.css
+++ b/css/child-theme.css
@@ -21769,7 +21769,7 @@ body .gform_wrapper .gform_footer button {
 }
 
 .testimonials {
-  height: 400px;
+  min-height: 400px;
   color: #fff;
   background: url(/wp-content/uploads/2023/08/home-hero-temp.jpg) no-repeat center, var(--col-primary-400);
   background-size: cover;
@@ -21787,7 +21787,7 @@ body .gform_wrapper .gform_footer button {
 .testimonials__testimonial {
   padding-top: 3rem;
   padding-inline: 2rem;
-  height: 300px;
+  min-height: 300px;
 }
 .testimonials__content {
   position: relative;
