--- a/src/sass/theme/blocks/_testimonials.scss
+++ b/src/sass/theme/blocks/_testimonials.scss
@@ -1,5 +1,5 @@
 .testimonials {
-    height: 400px;
+    min-height: 400px;
     color: #fff;
     background: url(/wp-content/uploads/2023/08/home-hero-temp.jpg) no-repeat center,
                 var(--col-primary-400);
@@ -17,7 +17,7 @@
     &__testimonial {
         padding-top: 3rem;
         padding-inline: 2rem;
-        height: 300px;
+        min-height: 300px;
     }
     &__content {
         position: relative;
